# rust-mastery-course

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/: labels.json
.github/ISSUE_TEMPLATE/: capstone_submission.yml  lab01_enhanced_guessing_game_submission.yml  lab02_config_parser_cli_submission.yml  lab03_in_memory_kv_store_submission.yml  lab04_binary_file_inspector_submission.yml  lab05_concurrent_http_fetcher_submission.yml  lab06_order_state_machine_submission.yml  lab07_multithreaded_chat_server_submission.yml  lab08_api_refactor_submission.yml  lab09_lock_free_queue_submission.yml  lab10_order_book_effective_rust_refactor_submission.yml  lab11_benchmark_locks_vs_lockfree_submission.yml  lab12_capstone_scaffolding_submission.yml  proj1_game_extension_submission.yml  proj2_second_game_submission.yml  proj3_mini_order_book_submission.yml  reading_notes.yml
.github/workflows/: auto-label-issues.yml  auto-label-pr.yml  auto-triage.yml  move-to-in-progress-on-push.yml  move-to-review-on-pr.yml  rust.yml  setup-kanban.yml  setup-milestones.yml
capstone/axum_gateway/: Cargo.toml  README.md
capstone/axum_gateway/src/: main.rs
capstone/capstone_trading_terminal/: Cargo.toml  README.md
docs/: Demo-Script.md  One-Pager.md  Rust-Mastery-Syllabus.md  Rust-Mastery-Syllabus.md.bak  lecture-generator.md  project-outline-template.md  reading-map.md  syllabus.md
docs/journal/: progress-tracker.md  socratic-learning-journal.md  weekly-reflection.md
labs/lab01_enhanced_guessing_game/: Cargo.toml  README.md
labs/lab02_config_parser_cli/: Cargo.toml  DESIGN_DOC.md  PROJECT_OUTLINE.md  README.md
labs/lab02_config_parser_cli/lectures/: cli_ergonomics_lecture.md  config_data_models_lecture.md  rust_testing_lecture.md  serde_lecture.md
labs/lab02_config_parser_cli/src/: cli.rs  errors.rs  lib.rs  main.rs
labs/lab02_config_parser_cli/src/errors/: mod.rs  not_supported.rs  parse.rs  path.rs  usage.rs  value_type.rs
labs/lab02_config_parser_cli/src/features/read/: logic.rs
labs/lab02_config_parser_cli/src/shared/: helpers.rs  mod.rs  types.rs
labs/lab02_config_parser_cli/src/shared/adapters/: json.rs  toml.rs
labs/lab02_config_parser_cli/src/shared/errors/: file_io.rs  not_supported.rs  parse.rs  path.rs  value_type.rs
labs/lab03_in_memory_kv_store/: Cargo.toml  README.md
labs/lab04_binary_file_inspector/: Cargo.toml  README.md
labs/lab05_concurrent_http_fetcher/: Cargo.toml  README.md
labs/lab06_order_state_machine/: Cargo.toml  README.md
labs/lab07_multithreaded_chat_server/: Cargo.toml  README.md
labs/lab08_api_refactor/: Cargo.toml  README.md
labs/lab09_lock_free_queue/: Cargo.toml  README.md
labs/lab10_order_book_effective_rust_refactor/: Cargo.toml  README.md
labs/lab11_benchmark_locks_vs_lockfree/: Cargo.toml  README.md
scripts/: burst.sh  modes.sh  pre-commit.sh
(+11 files in other folders)
