[package]
name = "capstone_axum_gateway"
version = "0.1.0"
edition = "2021"
description = "Axum gateway: /ws/feed, /orders, /cancel, /health, /metrics"

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors","trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
uuid = { version = "1", features = ["v4","fast-rng"] }
