[package]
name = "config_parser"
version = "0.1.0"
edition = "2021"
description = "Lab 2 — Config Parser CLI (20 pts)"
license = "MIT-0"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
